proxy/tproxy/rules.v4
# Generated by xtables-save v1.8.2 on Mon Aug 10 16:31:15 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Aug 10 16:31:15 2020
# Generated by xtables-save v1.8.2 on Mon Aug 10 16:31:15 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:CLASH - [0:0]
:CLASH_DNS - [0:0]
-A PREROUTING -p tcp -j CLASH
-A PREROUTING -p tcp -j CLASH
-A CLASH -d 10.0.0.0/8 -j RETURN
-A CLASH -d 127.0.0.0/8 -j RETURN
-A CLASH -d 169.254.0.0/16 -j RETURN
-A CLASH -d 172.16.0.0/12 -j RETURN
-A CLASH -d 192.168.0.0/16 -j RETURN
-A CLASH -d 224.0.0.0/4 -j RETURN
-A CLASH -d 240.0.0.0/4 -j RETURN
-A CLASH -p tcp -j REDIRECT --to-ports 7892
COMMIT
# Completed on Mon Aug 10 16:31:15 2020
# Generated by xtables-save v1.8.2 on Mon Aug 10 16:31:15 2020
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Aug 10 16:31:15 2020
